--- a/static/css/application.css
+++ b/static/css/application.css
@@ -21,12 +21,6 @@ ul {
 margin-left: 40px;
 }
 
-/*
-ul>ul {
-margin-left: 0px;
-}
-*/
-
 div {
 line-height:100%;
 }
@@ -58,18 +52,54 @@ font-size:14px;
 margin-left: 40px;
 }
 
-/*
-.reply>.reply {
-font-family: "Roboto", sans-serif;
-font-size:14px;
-margin-left: 0px;
-}
-*/
-
 h1, h2, h4 {
   font-family: "Gilda Display", serif;
 }
 
+.reply-button, .reply-button2 {
+        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d8e7f0), color-stop(1, #9bc5db));
+        background:-moz-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
+        background:-webkit-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
+        background:-o-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
+        background:-ms-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
+        background:linear-gradient(to bottom, #d8e7f0 5%, #9bc5db 100%);
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d8e7f0', endColorstr='#9bc5db',GradientType=0);
+        
+        background-color:#d8e7f0;
+        
+        -moz-border-radius:5px;
+        -webkit-border-radius:5px;
+        border-radius:5px;
+        
+        border:1px solid #6fb7de;
+        
+        display:inline-block;
+        color:#030003;
+        font-family:"Roboto";
+        font-size:14px;
+        font-weight:normal;
+        padding:1px 10px;
+        text-decoration:none;
+        
+        text-shadow:0px 1px 0px #e1e2ed;
+        
+}
+.reply-button:hover, .reply-button2:hover {
+        
+        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9bc5db), color-stop(1, #d8e7f0));
+        background:-moz-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
+        background:-webkit-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
+        background:-o-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
+        background:-ms-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
+        background:linear-gradient(to bottom, #9bc5db 5%, #d8e7f0 100%);
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bc5db', endColorstr='#d8e7f0',GradientType=0);
+        
+        background-color:#9bc5db;
+}
+.reply-button:active, .reply-button2:active {
+        position:relative;
+        top:1px;
+}
 
 .nav-pills > li a {
   border: 1px solid #ccc;
