--- a/static/css/application.css
+++ b/static/css/application.css
@@ -116,7 +116,7 @@ input[type=submit]:active {
   top:1px;
 }
 
-.reply-button, .reply-button2, .edit-button, .edit-button2 {
+.reply-button, .reply-button2 {
   display: inline-block;
 
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d8e7f0), color-stop(1, #9bc5db));
@@ -141,7 +141,7 @@ input[type=submit]:active {
   text-shadow:0px 1px 0px #e1e2ed;
 }
 
-.reply-button:hover, .reply-button2:hover, .edit-button:hover, .edit-button2:hover {
+.reply-button:hover, .reply-button2:hover {
   display: inline-block;
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9bc5db), color-stop(1, #d8e7f0));
   background:-moz-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
@@ -153,7 +153,32 @@ input[type=submit]:active {
   background-color:#9bc5db;
 }
 
-.reply-button:active, .reply-button2:active, .edit-button:active, .edit-button2:active {
+.reply-button:active, .reply-button2:active {
+  display: inline-block;
+  position:relative;
+  top:1px;
+}
+
+.edit-button, .edit-button2 {
+  display: inline-block;
+  background-color:#FFFFFF;
+  border-radius:5px;
+  border:1px solid #C7C7C7;
+  display:inline-block;
+  color:#030003;
+  font-family: "Roboto", sans-serif;
+  font-size:13px;
+  font-weight:normal;
+  padding:1px 10px;
+  text-decoration:none;
+}
+
+.edit-button:hover, .edit-button2:hover {
+  display: inline-block;
+  background-color:#C7C7C7;
+}
+
+.edit-button:active, .edit-button2:active {
   display: inline-block;
   position:relative;
   top:1px;
