Added a few features

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -42,11 +42,9 @@ h5 {
   display:block;
 }
 
-/*
-li {
+.chatsub {
   display:none;
 }
-*/
 
 h6 {
   visibility:hidden;
@@ -65,14 +63,6 @@ blockquote {
   line-height:120%;
   display:block;
 }
-
-.reply {
-  font-family: "Roboto", sans-serif;
-  font-size:14px;
-  margin-left: 80px;
-  display:block;
-}
-
 
 input[type=submit] {
         
@@ -118,123 +108,3 @@ input[type=submit]:active {
   top:1px;
 }
 
-.reply-button, .reply-button2 {
-  display: inline-block;
-
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d8e7f0), color-stop(1, #9bc5db));
-  background:-moz-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
-  background:-webkit-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
-  background:-o-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
-  background:-ms-linear-gradient(top, #d8e7f0 5%, #9bc5db 100%);
-  background:linear-gradient(to bottom, #d8e7f0 5%, #9bc5db 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d8e7f0', endColorstr='#9bc5db',GradientType=0);
-  background-color:#d8e7f0;
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
-  border-radius:5px;
-  border:1px solid #6fb7de;
-  display:inline-block;
-  color:#030003;
-  font-family: "Roboto", sans-serif;
-  font-size:14px;
-  font-weight:normal;
-  padding:1px 10px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #e1e2ed;
-}
-
-.reply-button:hover, .reply-button2:hover {
-  display: inline-block;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9bc5db), color-stop(1, #d8e7f0));
-  background:-moz-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
-  background:-webkit-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
-  background:-o-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
-  background:-ms-linear-gradient(top, #9bc5db 5%, #d8e7f0 100%);
-  background:linear-gradient(to bottom, #9bc5db 5%, #d8e7f0 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bc5db', endColorstr='#d8e7f0',GradientType=0);
-  background-color:#9bc5db;
-}
-
-.reply-button:active, .reply-button2:active {
-  display: inline-block;
-  position:relative;
-  top:1px;
-}
-
-.edit-button, .edit-button2 {
-  display: inline-block;
-  background-color:#FFFFFF;
-  border-radius:5px;
-  border:1px solid #C7C7C7;
-  display:inline-block;
-  color:#030003;
-  font-family: "Roboto", sans-serif;
-  font-size:13px;
-  font-weight:normal;
-  padding:1px 10px;
-  text-decoration:none;
-}
-
-.edit-button:hover, .edit-button2:hover {
-  display: inline-block;
-  background-color:#C7C7C7;
-}
-
-.edit-button:active, .edit-button2:active {
-  display: inline-block;
-  position:relative;
-  top:1px;
-}
-
-/*
-
-input[type=submit] {
-        
-        -moz-box-shadow:inset 0px 1px 0px 0px #7a7a7a;
-        -webkit-box-shadow:inset 0px 1px 0px 0px #7a7a7a;
-        box-shadow:inset 0px 1px 0px 0px #7a7a7a;
-        
-        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #67abe0), color-stop(1, #364247));
-        background:-moz-linear-gradient(top, #67abe0 5%, #364247 100%);
-        background:-webkit-linear-gradient(top, #67abe0 5%, #364247 100%);
-        background:-o-linear-gradient(top, #67abe0 5%, #364247 100%);
-        background:-ms-linear-gradient(top, #67abe0 5%, #364247 100%);
-        background:linear-gradient(to bottom, #67abe0 5%, #364247 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#67abe0', endColorstr='#364247',GradientType=0);
-        
-        background-color:#67abe0;
-        
-        -moz-border-radius:7px;
-        -webkit-border-radius:7px;
-        border-radius:7px;
-        
-        border:1px solid #29668f;
-        
-        display:inline-block;
-        color:#f0f0f0;
-        font-family:Trebuchet MS;
-        font-size:15px;
-        font-weight:normal;
-        padding:2px 16px;
-        text-decoration:none;
-        
-        text-shadow:0px 1px 0px #0c0d0d;
-        
-    }
-input[type=submit]:hover {
-        
-        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #364247), color-stop(1, #67abe0));
-        background:-moz-linear-gradient(top, #364247 5%, #67abe0 100%);
-        background:-webkit-linear-gradient(top, #364247 5%, #67abe0 100%);
-        background:-o-linear-gradient(top, #364247 5%, #67abe0 100%);
-        background:-ms-linear-gradient(top, #364247 5%, #67abe0 100%);
-        background:linear-gradient(to bottom, #364247 5%, #67abe0 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#364247', endColorstr='#67abe0',GradientType=0);
-        
-        background-color:#364247;
-    }
-input[type=submit]:active {
-        position:relative;
-        top:1px;
-    }
-*/
