--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -8,6 +8,10 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
+.hidden {
+display:none;
+}
+
 .clearfix {
   *zoom: 1;
 }
