--- a/static/css/application.css
+++ b/static/css/application.css
@@ -11,7 +11,7 @@
   font-style: normal;
 }
 
-#users {
+#allusers {
   position:fixed;
   width: 48.93617021276595%;
   margin-left: 48.93617021276595%;
